k8s/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: http
    port: 5000
    targetPort: 5000 # container
    # nodePort: 30038
    protocol: TCP
