k8s/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: http
    port: 5001
    targetPort: 5001 # container
    # nodePort: 30038
    protocol: TCP
